--- a/media/davewhipp-print.css
+++ b/media/davewhipp-print.css
@@ -56,7 +56,8 @@ body {
 	font-size: 12pt;
 	line-height: 1.35em;
 	/*also written as...  font: normal normal 400 100%/1.5em;*/
-	font-family: Avenir,Verdana,sans-serif;
+	/*font-family: Avenir,Verdana,sans-serif;*/
+	font-family: "Times New Roman";
 	/*margin-top: 1em;
 	margin-left: 1em;*/
 }
