--- a/media/davewhipp-screen.css
+++ b/media/davewhipp-screen.css
@@ -56,8 +56,7 @@ body {
 	font-size: 100%;
 	line-height: 1.5em;
 	/*also written as...  font: normal normal 400 100%/1.5em;*/
-	/*font-family: Avenir,Verdana,sans-serif;*/
-	font-family: sans-serif;
+	font-family: "Times New Roman";
 	margin-top: 1em;
 	margin-left: 1em;
 }
