--- a/media/yibo-print.css
+++ b/media/yibo-print.css
@@ -53,20 +53,21 @@ table {
 
 body {
 	font: normal normal 400;
-	font-size: 100%;
-	line-height: 1.5em;
+	font-size: 12pt;
+	line-height: 1.35em;
 	/*also written as...  font: normal normal 400 100%/1.5em;*/
+	/*font-family: Avenir,Verdana,sans-serif;*/
 	font-family: "Times New Roman";
-	margin-top: 1em;
-	margin-left: 1em;
+	/*margin-top: 1em;
+	margin-left: 1em;*/
 }
 
 p {
 	position: relative;
 	left: 25%;
-	margin-bottom: 0.7em;
+	margin-bottom: 0.0em;
 	margin-right: 0;
-	width: 55%;
+	width: 60%;
 }
 
 code {
@@ -74,7 +75,7 @@ code {
 	font-size: 90%;
 	/*line-height: 1em;*/
 	font-family: Monaco,Menlo,monospace,sans-serif;
-	color: #aaa;
+	color: #ccc;
 }
 
 p code {
@@ -136,25 +137,27 @@ h1+p {
 h2 {
 	font-size: 1.1em;
 	color: #bc412b;
-	margin-top: 3em;
+	margin-top: 0em;
 	position: relative;
 	top: 1.4em;
 	text-align: right;
 	width: 20%;
 }
 
+
 h3 {
 	font-size: 1em;
 	line-height: 2em;
+	color: #ccc;
 	position: relative;
-	top: 1.7em;
+	top: 1.6em;
 	text-align: right;
 	width: 20%;
 }
 
 a {
 	color: inherit;
-	/*text-decoration:none*/
+	text-decoration:none
 }
 
 a:hover {
@@ -165,9 +168,9 @@ a:hover {
 	margin-top: 1em;
 	position: relative;
 	left: 25%;
-	color: #bc412b;
+	color: #ccc;
 	font-family: Monaco,Menlo,monospace,sans-serif;
-	font-size: 100%;
+	font-size: 90%;
 }
 
 #webaddress a {
@@ -175,21 +178,23 @@ a:hover {
 }
 
 em {
-	/* font-weight: bold; */
-	font-style: italic;
+	font-style: normal;
+	color: #2d4e5e
 }
 
 strong {
 	font-weight: bold;
 }
+strong::after {
+    content: "";
+    display: block;
+    margin-bottom: 5px; /* 调整这个值来改变空白区域的大小 */
+}
 
-#address {
+#ghbutton {
 	display: none;
+	visibility: hidden;
 }
 
 
 
-/*
-@media only screen and (max-width: 480px) {
-	make one column somehow...
-}*/
