--- a/media/davewhipp-print.css
+++ b/media/davewhipp-print.css
@@ -1,194 +1,146 @@
-/* http://meyerweb.com/eric/tools/css/reset/
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+/* Reset and basic setup */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
-/* end of reset */
-
-
 
 body {
-	font: normal normal 400;
-	font-size: 12pt;
-	line-height: 1.35em;
-	/*also written as...  font: normal normal 400 100%/1.5em;*/
-	/*font-family: Avenir,Verdana,sans-serif;*/
-	font-family: "Times New Roman";
-	/*margin-top: 1em;
-	margin-left: 1em;*/
+    font-family: "Inter", "Helvetica Neue", Arial, sans-serif;
+    font-size: 11pt;
+    line-height: 1.5;
+    color: #2c3e50;
+    max-width: 850px;
+    margin: 0 auto;
+    padding: 30px;
 }
 
-p {
-	position: relative;
-	left: 25%;
-	margin-bottom: 0.2em;
-	margin-right: 0;
-	width: 60%;
-}
-
-code {
-	font: normal normal;
-	font-size: 90%;
-	/*line-height: 1em;*/
-	font-family: Monaco,Menlo,monospace,sans-serif;
-	color: #ccc;
-}
-
-p code {
-	position: absolute;
-	text-align: right;
-	right: -20%;
-}
-
-
-ul {
-	position: relative;
-	left: 25%;
-	width: 75%;
-	margin-bottom: 1em;
-	/*margin-top: -0.5em;*/
-}
-
-/*uncomment to get dashes in the list*/
-/*li:before {
-	content: "-";
-	position: relative;
-	left: -0.25em;
-}*/
-
-li {
-	/*second line indent*/
-	padding-left: 1.25em;
-	text-indent: -1.25em;
-	/*color: #777;*/
-}
-
-li ul {
-	position: relative;
-	left: 0;
-	width: 100%;
-	margin-top: 0.25em;
-}
-
-h1,h2,h3,h4 {
-	font-weight: 400;
-	font-family: Avenir,Cousine,Verdana,sans-serif;
-	width: 80%;
-}
-
+/* Header styling */
 h1 {
-	text-align: left;
-	font-size: 3em;
-	line-height: 1em;
-	position: relative;
-	left: 25%;
+    font-size: 28pt;
+    font-weight: 700;
+    color: #1a237e;
+    margin-bottom: 8px;
+    text-align: center;
 }
 
-h1+p {
-	/*subtitle*/
-	font-style: italic;
-	font-size: 110%;
+h1 + p {
+    font-size: 13pt;
+    color: #455a64;
+    text-align: center;
+    margin-bottom: 15px;
 }
 
-h2 {
-	font-size: 1.1em;
-	color: #a00;
-	margin-top: 2em;
-	position: relative;
-	top: 1.2em;
-	text-align: right;
-	width: 20%;
-}
-
-
-h3 {
-	font-size: 1em;
-	line-height: 2em;
-	color: #ccc;
-	position: relative;
-	top: 1.6em;
-	text-align: right;
-	width: 20%;
-}
-
-a {
-	color: inherit;
-	text-decoration:none
-}
-
-a:hover {
-	color:#39f
-}
-
+/* Contact info */
 #webaddress {
-	margin-top: 1em;
-	position: relative;
-	left: 25%;
-	color: #ccc;
-	font-family: Monaco,Menlo,monospace,sans-serif;
-	font-size: 90%;
+    text-align: center;
+    margin: 15px 0 30px;
+    color: #455a64;
+    font-size: 11pt;
 }
 
 #webaddress a {
-	text-decoration: none;
+    color: #1a237e;
+    text-decoration: none;
 }
 
+#webaddress i {
+    color: #1a237e;
+    margin-right: 4px;
+}
+
+/* Section headers */
+h2 {
+    font-size: 16pt;
+    color: #1a237e;
+    border-bottom: 2px solid #1a237e;
+    margin: 25px 0 15px;
+    padding-bottom: 5px;
+    clear: both;
+    width: 100%;
+    text-align: left;
+}
+
+/* Experience blocks */
+.experience-block {
+    margin-bottom: 20px;
+}
+
+h3 {
+    font-size: 12pt;
+    font-weight: 600;
+    color: #2c3e50;
+    margin: 15px 0 8px;
+}
+
+/* Lists */
+ul {
+    list-style-type: none;
+    margin: 8px 0 15px;
+    padding-left: 0;
+}
+
+li {
+    margin-bottom: 6px;
+    padding-left: 15px;
+    position: relative;
+}
+
+li:before {
+    content: "•";
+    position: absolute;
+    left: 0;
+    color: #1a237e;
+}
+
+/* Date codes */
+code {
+    font-family: inherit;
+    color: #455a64;
+    font-weight: 500;
+    float: right;
+}
+
+/* Tech stack and emphasis */
 em {
-	font-style: normal;
-	color: #2d4e5e
+    font-style: normal;
+    color: #455a64;
 }
 
 strong {
-	font-weight: bold;
+    font-weight: 600;
+    color: #2c3e50;
 }
 
-#ghbutton {
-	display: none;
-	visibility: hidden;
+/* Print settings */
+@media print {
+    body {
+        padding: 20px 25px;
+    }
+
+    @page {
+        margin: 15mm;
+        size: letter;
+    }
+
+    h2, h3 {
+        page-break-after: avoid;
+    }
+
+    .experience-block, li {
+        page-break-inside: avoid;
+    }
+    
+    #ghbutton {
+        display: none;
+    }
+}
+
+/* Utilities */
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
 }
 
 
