--- a/media/kjhealy-print.css
+++ b/media/kjhealy-print.css
@@ -1,193 +1,156 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
+/* Reset */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
+/* Basic page setup */
 body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 11pt;
+    line-height: 1.4;
+    color: #333;
+    background: #fff;
+    margin: 0 auto;
+    max-width: 900px;
+    padding: 20px 40px;
 }
 
-/* end of reset */
-
-
-
-body {
-	font: normal normal 400;
-	font-size: 10pt;
-	line-height: 1.2em;
-	font-family: Verdana,sans-serif;
-	/*margin-top: 1em;
-	margin-left: 1em;*/
-}
-
-p {
-	position: relative;
-	left: 28%;
-	margin-bottom: 0.1em;
-	margin-right: 0;
-	width: 70%;
-}
-
-code {
-	font: normal normal;
-	font-size: 60%;
-	/*line-height: 1em;*/
-	font-family: Menlo,monospace,sans-serif;
-	color: #ccc;
-}
-
-p code {
-	position: absolute;
-	left: -11%;
-}
-
-
-ul { 
-	position: relative;
-	left: 28%;
-	width: 65%;
-	margin-bottom: 0.5em;
-	/*margin-top: -0.5em;*/
-}
-
-/*uncomment to get dashes in the list*/
-/*li:before {
-	content: "-";
-	position: relative;
-	left: -0.25em;
-}*/
-
-li {
-	/*second line indent*/
-	padding-left: 1.25em;
-	text-indent: -1.25em;
-	/*color: #777;*/
-}
-
-li ul {
-	position: relative;
-	left: 0;
-	width: 100%;
-	margin-top: 0.25em;
-}
-
-h1,h2,h3,h4 {
-	font-weight: 400;
-	font-family: Cousine,Verdana,sans-serif;
-	width: 65%;
-}
-
+/* Header section */
 h1 {
-	text-align: left;
-	font-size: 3em;
-	line-height: 1em;
-	position: relative;
-	left: 28%;
+    font-size: 24pt;
+    font-weight: 700;
+    color: #2b2b2b;
+    margin-bottom: 5px;
+    letter-spacing: -0.5px;
 }
 
-h1+p { 
-	/*subtitle*/
-	font-style: italic;
-	font-size: 110%;
+h1 + p {
+    font-size: 12pt;
+    color: #666;
+    margin-bottom: 15px;
 }
 
-h2 {
-	font-size: 1.1em;
-	color: #a00;
-	margin-top: 0.2em;
-	position: relative;
-	top: 0.2em;
-	text-align: right;
-	width: 18%;
-}
-
-
-h3 {
-	font-size: 1em;
-	line-height: 1.6em;
-	color: #ccc;
-	position: relative;
-	top: 0em;
-	text-align: right;
-	width: 18%;
-}
-
-a {
-	color: inherit;
-	text-decoration:none
-}
-
-a:hover {
-	color:#39f
-}
-
+/* Contact info */
 #webaddress {
-	margin-top: 1em;
-	position: relative;
-	left: 28%;
-	color: #ccc;
-	font-family: Menlo,monospace,sans-serif;
-	font-size: 80%;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 10pt;
+    color: #666;
+    margin: 10px 0 20px 0;
 }
 
 #webaddress a {
-	text-decoration: none;
+    color: #666;
+    text-decoration: none;
 }
 
+/* Section headers */
+h2 {
+    font-size: 14pt;
+    font-weight: 700;
+    color: #2b2b2b;
+    margin: 25px 0 15px 0;
+    padding-bottom: 5px;
+    border-bottom: 1px solid #ddd;
+}
+
+h3 {
+    font-size: 11pt;
+    font-weight: 700;
+    color: #444;
+    margin: 15px 0 8px 0;
+}
+
+/* Content layout */
+p, ul {
+    margin-left: 0;
+    width: 100%;
+    position: relative;
+    margin-bottom: 8px;
+}
+
+/* List items */
+ul {
+    list-style-type: none;
+    margin-bottom: 15px;
+}
+
+li {
+    margin-bottom: 6px;
+    padding-left: 15px;
+    position: relative;
+}
+
+li:before {
+    content: "•";
+    position: absolute;
+    left: 0;
+    color: #666;
+}
+
+/* Date codes */
+code {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 10pt;
+    color: #666;
+    font-weight: 500;
+}
+
+/* Tech stack and emphasis */
 em {
-	font-style: normal;
-	color: #2d4e5e 
+    font-style: normal;
+    color: #666;
 }
 
 strong {
-	font-weight: bold;
+    font-weight: 600;
+    color: #333;
 }
 
+/* Links */
+a {
+    color: #2b2b2b;
+    text-decoration: none;
+}
+
+/* Experience sections */
+.experience-item {
+    margin-bottom: 20px;
+}
+
+/* Hide elements not needed in print */
 #ghbutton {
-	display: none;
-	visibility: hidden;
+    display: none;
 }
 
+/* Page breaks */
+h2 {
+    page-break-before: auto;
+    page-break-after: avoid;
+}
 
+h3 {
+    page-break-after: avoid;
+}
 
+/* Print-specific settings */
+@media print {
+    body {
+        margin: 0;
+        padding: 15px 25px;
+    }
 
+    @page {
+        margin: 15mm;
+    }
+
+    a {
+        text-decoration: none;
+    }
+
+    p, ul {
+        orphans: 3;
+        widows: 3;
+    }
+}
